--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,6 +6,12 @@
    width: 100%;
 }
 
+.home-banner-out-box{
+   max-width: 1393px;
+   padding: 0px 70px;
+   margin: auto;
+}
+
 .home-banner-title{
    font-weight: 700;
    font-size: 47.78px;
@@ -20,7 +26,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   padding: 112px 70px;
+   padding: 112px 0px;
 }
 
 .home-sections{
