--- a/src/pages/Experiences/Experiences.css
+++ b/src/pages/Experiences/Experiences.css
@@ -5,7 +5,7 @@
 }
 
 .experiences-title{
-font-weight: 700;
+   font-weight: 700;
    font-size: 33.18px;
    line-height: 40px;
 }
@@ -36,19 +36,22 @@ font-weight: 700;
    justify-content: space-between;
 }
 
-.experiences-list-card-sport{
-   font-weight: 400;
+.experiences-list-card-up-top{
+   display: flex;
+   justify-content: space-between;
+}
+
+.experiences-list-card-info{
+   font-weight: 600;
    font-size: 13.33px;
    line-height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
-   color: #FFFFFF;
-   width: 110px;
-   height: 48px;
+   width: 120px;
+   height: 28px;
    background: rgba(29, 29, 29, 0.5);
    border-radius: 5px;
-   align-self: flex-end;
 }
 
 .experiences-list-card-user-img{
@@ -58,4 +61,25 @@ font-weight: 700;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: cover;
+}
+
+.experiences-status-card{
+   align-self: end;
+}
+
+.experiences-list-card-down{
+   padding: 8px;
+}
+
+.experiences-list-card-title{
+   white-space: nowrap;
+   overflow: auto;
+   display: block;
+   font-weight: 400;
+   font-size: 16px;
+}
+
+.experiences-list-card-down-bot{
+   display: flex;
+   justify-content: space-between;
 }
