--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,10 @@ code {
       monospace;
 }
 
-p, h1, h2, h3, h4, h5 {
+p, h1, h2, h3, h4, h5, a {
    margin: 0;
+   text-decoration: none;
+   color: black;
 }
 
 .text-white {
