--- a/src/pages/Experiences/Experiences.css
+++ b/src/pages/Experiences/Experiences.css
@@ -95,3 +95,21 @@
    padding-left: 10px;
    text-align: end;
 }
+
+.experiences-filter{
+   display: flex;
+   justify-content: space-between;
+   max-width: 700px;
+   margin: 20px auto;
+}
+
+.filter-opiton{
+   background-color: #FFDEBD;
+   border-radius: 5px;
+   padding: 15px 20px;
+   text-align: center;
+}
+
+.filter-opiton h3{
+   font-size: 16px;
+}
