--- a/src/pages/auth/Auth.css
+++ b/src/pages/auth/Auth.css
@@ -1,6 +1,8 @@
 .auth-form{
    display: flex;
+   flex-direction: column;
    align-items: center;
-   justify-content: center;
-   height: 50vh;
+   justify-content: space-around;
+   height: 150px;
+   margin-top: 100px;
 }
