--- a/src/components/ui/FilterOption.css
+++ b/src/components/ui/FilterOption.css
@@ -1,10 +1,10 @@
 .filter-opiton {
-   background-color: #FFDEBD;
-   border-radius: 5px;
-   padding: 15px 20px;
-   text-align: center;
+  background-color: #ffdebd;
+  border-radius: 5px;
+  padding: 15px 20px;
+  text-align: center;
 }
 
 .filter-opiton h3 {
-   font-size: 16px;
+  font-size: 16px;
 }
